--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -22,6 +22,14 @@ jobs:
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
+      -users: actions/checkout@v2
+      -name: docker login
+      env:
+      DOCKER_USER: ${{secrets.DOCKER_USER}}
+       DOCKER_PASSWORD: ${{secrets.DOCKER_PASSWORD}}
+       -run:|
+       docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
+    
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
       - name: Docker build
