--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -29,10 +29,10 @@ jobs:
        DOCKER_PASSWORD: ${{secrets.DOCKER_PASSWORD}}
        -run:|
        docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
-    
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v2
-      - name: Docker build
+       name:docker build nginx
+       run:docker build -t h411/nginx .
+       -name: docker push
+
       run:|
       docker build -t h411/nginx .
       
